<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/unica_camera_feature_title" settings:hierarchicalParentFragment="io.mesalabs.unica.settings.UnicaSettingsFragment" settings:topLevelPreferenceKey="unica_camera_feature"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res-auto">
    <SecPreference android:title="@string/unica_camera_feature_import_title" android:key="unica_camera_feature_import" android:summary="@string/unica_camera_feature_import_summary" />
    <SecPreference android:title="@string/unica_camera_feature_export_title" android:key="unica_camera_feature_export" android:summary="@string/unica_camera_feature_export_summary" />
    <SecPreference android:title="@string/unica_camera_feature_reset_title" android:key="unica_camera_feature_reset" android:summary="@string/unica_camera_feature_reset_summary" />
    <SecPreference android:title="@string/unica_camera_feature_search_title" android:key="unica_camera_feature_search" android:summary="@string/unica_camera_feature_search_summary" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference android:key="unica_camera_feature_actions_divider" />
    <SecPreferenceCategory android:title="@string/unica_camera_feature_values_title" android:key="unica_camera_feature_dynamic" />
</PreferenceScreen>
