<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/unica_now_nudge_replies_title" settings:hierarchicalParentFragment="io.mesalabs.unica.settings.extra.ExtraSettingsFragment" settings:topLevelPreferenceKey="unica_now_nudge_replies"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res-auto">
    <EditTextPreference android:title="@string/unica_now_nudge_reply_language_title" android:key="unica_now_nudge_reply_language" android:defaultValue="en" android:dialogTitle="@string/unica_now_nudge_reply_language_title" android:inputType="textNoSuggestions" />
    <EditTextPreference android:title="@string/unica_now_nudge_reply_category_title" android:key="unica_now_nudge_reply_category" android:defaultValue="default" android:dialogTitle="@string/unica_now_nudge_reply_category_title" android:inputType="textNoSuggestions" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <EditTextPreference android:title="@string/unica_now_nudge_reply_positive_title" android:key="unica_now_nudge_reply_positive" android:defaultValue="Yes" android:dialogTitle="@string/unica_now_nudge_reply_positive_title" android:inputType="textCapSentences" />
    <EditTextPreference android:title="@string/unica_now_nudge_reply_neutral_title" android:key="unica_now_nudge_reply_neutral" android:defaultValue="Let me check" android:dialogTitle="@string/unica_now_nudge_reply_neutral_title" android:inputType="textCapSentences" />
    <EditTextPreference android:title="@string/unica_now_nudge_reply_negative_title" android:key="unica_now_nudge_reply_negative" android:defaultValue="Sorry, I can't" android:dialogTitle="@string/unica_now_nudge_reply_negative_title" android:inputType="textCapSentences" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <Preference android:title="@string/unica_now_nudge_reply_save_title" android:key="unica_now_nudge_reply_save" android:summary="@string/unica_now_nudge_reply_save_summary" settings:controller="io.mesalabs.unica.settings.extra.NowNudgeReplyFallbacksPreferenceController" />
</PreferenceScreen>
